backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diplomski-todo
spec:
  selector:
    matchLabels:
      app: diplomski-todo
  replicas: 2
  template:
    metadata:
      labels:
        app: diplomski-todo
    spec:
      containers:
        - name: diplomski
          image: leonardogazdek/diplomski:backend-x86v3
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "768Mi"
              cpu: "500m"
          ports:
            - containerPort: 8888
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: diplomski-todo-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8888
  selector:
    app: diplomski-todo
