ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diplomski-todo-ingress
spec:
  rules:
    - host: 141.147.10.108.nip.io
      http:
        paths:
          - path: /todo-api
            pathType: Prefix
            backend:
              service:
                name: diplomski-todo-service
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diplomski-todo-frontend-service
                port:
                  number: 9001
  ingressClassName: nginx
